@startuml

title __INFOMODULE's Class Diagram__\n

  namespace ModerationModule {
    namespace InfoModule {
      class ModerationModule.InfoModule.HelpCommand {
          {static} - ctrl : Controller
          - helpText : String
          - perm : Permission
          + HelpCommand()
          {static} + dispHelp()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  namespace ModerationModule {
    namespace InfoModule {
      class ModerationModule.InfoModule.InfoCommand {
          - helpText : String
          - perm : Permission
          + InfoCommand()
          + execute()
          + getHelp()
          + getPerm()
      }
    }
  }
  

  ModerationModule.InfoModule.HelpCommand -up-|> ModerationModule.ModCommand
  ModerationModule.InfoModule.InfoCommand -up-|> ModerationModule.ModCommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
